Fix multi-selects not collapsing correctly
Also, reverted Trix toolbar change that was caused by the same problem
Closes #138

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13152,7 +13152,7 @@ trix-toolbar {
 trix-toolbar .trix-button-row {
   -webkit-box-pack: start;
           justify-content: flex-start;
-  flex-wrap: wrap;
+  overflow-x: auto;
 }
 
 trix-toolbar .trix-button-group {
